# MoniAuxServer

./: .gitignore  CMakeLists.txt  KeyTableLookUp.md  LICENSE  README.md  gui.c  main.c
include/: gui.h  icon.h  keymap.h  keysim.h  serial.h
src/: gui.c  keymap.c  keysim.c  main.c  serial.c
